--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,29 @@
-body {
+.root{
+  --color-primary: #32c94b;
+  --color-black:#121212;
+  --color-white: #ffffff;
+}
+
+*,
+*::before,
+*::after{
+  box-sizing: border-box;
+}
+
+*{
+  margin:0;
+}
+
+html,body{
+  height: 100%;
+}
+body{
+  font-family: Poppins, sans-serif;
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +35,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
