--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body{
   font-family: Poppins, sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  background-color: #121212;;
 }
 
 /* body {
