--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
 html,body{
   height: 100%;
 }
+
 body{
   font-family: Poppins, sans-serif;
   line-height: 1.5;
@@ -24,3 +25,34 @@ body{
   background-color: #121212;
 }
 
+img,picture,video,canvas,svg{
+  display: block;
+  max-width: 100%;
+}
+
+input,button,textarea,select{
+  font:inherit;
+}
+
+p,h1,h2,h3,h4,h5,h6{
+  overflow-wrap: break-word;
+}
+
+#root, #__next{
+  isolation: isolate;
+}
+.swiper-wrapper{
+  display: flex;
+}
+.swiper-slide{
+  display: flex;
+  width: auto !important;
+}
+
+a,
+a:hover,
+a:focus,
+a:active{
+  text-decoration: none;
+  color: inherit;
+}
