--- a/src/components/cardFolder/card.css
+++ b/src/components/cardFolder/card.css
@@ -22,7 +22,9 @@
 
 .banner{
     position: absolute;
-    bottom: 0;
+    bottom: 0;   
+    /* Editing this -159px */
+    /* bottom: -158px; */
     left: 0;
     width: 100%;
     height: 42px;
