--- a/src/pages/HomePage/Homepage.css
+++ b/src/pages/HomePage/Homepage.css
@@ -1,6 +1,12 @@
 .wrapper2{
-    padding: 0px 30px 60px 30px;
+    /* padding: 0px 30px 60px 30px; */
     display: flex;
     flex-direction: column;
     gap: 32px;
+}
+
+hr{
+border: 1px solid #32c94b;
+margin-top: 30px;
+
 }
